# terk

./: CMakeLists.txt
include/kterm/: AnsiParser.h  Config.hpp  PTY.h  Renderer.h  TerminaWindow.h  TerminalWidget.h  TerminalWindow.hpp
include/kterm/core/: Terminal.hpp
include/kterm/font/: FontManager.hpp
include/kterm/input/: InputHandler.hpp
include/kterm/parser/: AnsiParser.hpp
include/kterm/pty/: PTY.hpp  PTYPlatform.hpp
include/kterm/renderer/: Cell.hpp  Grid.hpp  QtRenderer.hpp  Renderer.hpp
include/kterm/sandbox/: Sandbox.hpp
include/kterm/scrollback/: ScrollbackBuffer.hpp
include/kterm/theme/: Theme.hpp  ThemeLoader.hpp
include/kterm/ui/: TerminalWidget.hpp  TerminalWindow.hpp
include/renderer/: Grid.hpp  QtRenderer.hpp
include/utils/: color_utils.hpp  format_utils.hpp  string_utils.hpp  table_utils.hpp
platform/linux/: PTYPlatform.cpp  PTY_Linux.h
platform/windows/: PTYPlatform.cpp  PTY_Windows.h
resources/config/: terk.conf
src/: Config.cpp  TerminalWidget.cpp  TerminalWindow.cpp  main.cpp
src/core/: Terminal.cpp
src/font/: FontManager.cpp
src/input/: InputHandler.cpp
src/parser/: AnsiParser.cpp
src/pty/: PTY.cpp  PTYPlatform.cpp
src/renderer/: Grid.cpp  QtRenderer.cpp  Renderer.cpp
src/sandbox/: Sandbox.cpp
src/scrollback/: ScrollbackBuffer.cpp
src/theme/: Theme.cpp  ThemeLoader.cpp
